fix(meep-ui): word-break -> word-wrap (#248)
商品名稱＆商品描述以單字為單位斷行(N164)

--- a/packages/meep-ui/src/draftText/styles/index.less
+++ b/packages/meep-ui/src/draftText/styles/index.less
@@ -3,7 +3,8 @@
   padding: 15px 5px;
 
   * {
-    word-break: break-all;
+    word-wrap: break-word;
+    hyphens: auto;
   }
 
   p {
